--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<a class="weatherwidget-io" href="https://forecast7.com/en/35d99n78d90/durham/unit=us" data-label_1="DURHAM" data-label_2="WEATHER" data-theme="kiwi" data-basecolor="rgba(114, 133, 76, 0.78)" data-textcolor="#cdffb7" data-highcolor="#cdffb7" data-lowcolor="#cdffb7" data-suncolor="#fff490" data-cloudfill="#b4e243" >DURHAM WEATHER</a>
+<a class="weatherwidget-io" href="https://forecast7.com/en/35d99n78d90/durham/?unit=us" data-label_1="DURHAM" data-label_2="WEATHER" data-theme="kiwi" data-basecolor="rgba(114, 133, 76, 0.78)" data-textcolor="#cdffb7" data-highcolor="#cdffb7" data-lowcolor="#cdffb7" data-suncolor="#fff490" data-cloudfill="#b4e243" >DURHAM WEATHER</a>
 <script>
 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
 </script>
